# cmake_learn

./: README.MD
build_type/: CMakeLists.txt  README.MD  main.cpp
compile_flags/: CMakeLists.txt  README.MD  main.cpp
compiler_select/: CMakeLists.txt  README.MD
generate_ninja_not_Unix_makefile/: CMakeLists.txt  README.MD  build.sh
import_third_target/: CMakeLists.txt  README.adoc  run_test.sh
install_lib_bin_header/: CMakeLists.txt  README.MD
install_lib_bin_header/src/: hello.cpp
option_custom_target/: README.MD  test.cpp
set_cxx_stand/check_cxx_feature/: CMakeLists.txt
set_cxx_stand/check_cxx_flag/: CMakeLists.txt  README.MD  build.sh
set_cxx_stand/check_cxx_standard/: CMakeLists.txt  README.MD
shared_library/: CMakeLists.txt  README.MD
shared_library/inc/: hello.h
shared_library/src/: main.cpp
static_library/: CMakeLists.txt  README.MD
static_library/src/: hello.cpp
subdir_cmakefile_include/A-basic/: README.MD
subdir_include/: CMakeLists.txt  README.MD
subdir_include/src/: hello.cpp
